@@ -10,6 +10,7 @@ import org.springframework.retry.annotation.Retryable;
 import org.springframework.stereotype.Service;
 import uk.gov.hmcts.reform.sscs.ccd.domain.*;
 import uk.gov.hmcts.reform.sscs.exception.GetCaseException;
+import uk.gov.hmcts.reform.sscs.exception.GetHearingException;
 import uk.gov.hmcts.reform.sscs.exception.ListingException;
 import uk.gov.hmcts.reform.sscs.exception.UnhandleableHearingStateException;
 import uk.gov.hmcts.reform.sscs.exception.UpdateCaseException;
@@ -22,24 +23,24 @@ import uk.gov.hmcts.reform.sscs.model.hearings.HearingRequest;
 import uk.gov.hmcts.reform.sscs.model.multi.hearing.CaseHearing;
 import uk.gov.hmcts.reform.sscs.model.multi.hearing.HearingsGetResponse;
 import uk.gov.hmcts.reform.sscs.model.single.hearing.HearingCancelRequestPayload;
+import uk.gov.hmcts.reform.sscs.model.single.hearing.HearingGetResponse;
 import uk.gov.hmcts.reform.sscs.model.single.hearing.HearingRequestPayload;
 import uk.gov.hmcts.reform.sscs.model.single.hearing.HmcUpdateResponse;
 import uk.gov.hmcts.reform.sscs.reference.data.model.CancellationReason;
 import uk.gov.hmcts.reform.sscs.service.holder.ReferenceDataServiceHolder;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static java.util.Objects.isNull;
+import static java.util.Objects.nonNull;
 import static uk.gov.hmcts.reform.sscs.ccd.domain.HearingRoute.LIST_ASSIST;
 import static uk.gov.hmcts.reform.sscs.helper.mapping.HearingsMapping.buildHearingPayload;
 import static uk.gov.hmcts.reform.sscs.helper.service.HearingsServiceHelper.getHearingId;
 
-@SuppressWarnings({"PMD.UnusedFormalParameter", "PMD.TooManyMethods"})
-// TODO Unsuppress in future
 @Slf4j
 @Service
 @RequiredArgsConstructor
+@SuppressWarnings({"PMD.ExcessiveImports", "PMD.UnusedFormalParameter", "PMD.TooManyMethods"})
 public class HearingsService {
 
     @Value("${retry.hearing-response-update.max-retries}")
@@ -51,10 +52,15 @@ public class HearingsService {
 
     private final CcdCaseService ccdCaseService;
 
-    private final ReferenceDataServiceHolder referenceDataServiceHolder;
+    private final ReferenceDataServiceHolder refData;
     // Leaving blank for now until a future change is scoped and completed, then we can add the case states back in
-    public static final List<State> INVALID_CASE_STATES = Arrays.asList();
+    public static final List<State> INVALID_CASE_STATES = List.of();
+    private static final Long HEARING_VERSION_NUMBER = 1L;
 
+    @Retryable(
+        value = UpdateCaseException.class,
+        maxAttemptsExpression = "${retry.hearing-response-update.max-retries}",
+        backoff = @Backoff(delayExpression = "${retry.hearing-response-update.backoff}"))
     public void processHearingRequest(HearingRequest hearingRequest) throws GetCaseException,
         UnhandleableHearingStateException, UpdateCaseException, ListingException {
         log.info("Processing Hearing Request for Case ID {}, Hearing State {} and Route {} and Cancellation Reason {}",
@@ -83,26 +89,27 @@ public class HearingsService {
         }
 
         switch (wrapper.getHearingState()) {
-            case CREATE_HEARING:
+            case ADJOURN_CREATE_HEARING -> {
+                wrapper.getCaseData().getAdjournment().setAdjournmentInProgress(YesNo.YES);
+                wrapper.setHearingState(HearingState.CREATE_HEARING);
                 createHearing(wrapper);
-                break;
-            case UPDATE_HEARING:
-                updateHearing(wrapper);
-                break;
-            case UPDATED_CASE:
-                updatedCase(wrapper);
-                break;
-            case CANCEL_HEARING:
-                cancelHearing(wrapper);
-                break;
-            case PARTY_NOTIFIED:
-                log.info("Parties notified API not supported. Case ID {}",
-                         caseId);
-                break;
-            default:
+            }
+            case CREATE_HEARING -> createHearing(wrapper);
+            case UPDATE_HEARING -> updateHearing(wrapper);
+            case UPDATED_CASE -> log.info(
+                "Updated case API not supported. Case ID {}",
+                caseId
+            );
+            case CANCEL_HEARING -> cancelHearing(wrapper);
+            case PARTY_NOTIFIED -> log.info(
+                "Parties notified API not supported. Case ID {}",
+                caseId
+            );
+            default -> {
                 UnhandleableHearingStateException err = new UnhandleableHearingStateException(wrapper.getHearingState());
-                log.error(err.getMessage(),err);
+                log.error(err.getMessage(), err);
                 throw err;
+            }
         }
     }
 
@@ -134,9 +141,11 @@ public class HearingsService {
         CaseHearing hearing = HearingsServiceHelper.findExistingRequestedHearings(hearingsGetResponse);
         HmcUpdateResponse hmcUpdateResponse;
 
+        OverridesMapping.setDefaultListingValues(wrapper, refData);
+
         if (isNull(hearing)) {
-            OverridesMapping.setDefaultOverrideFields(wrapper, referenceDataServiceHolder);
-            HearingRequestPayload hearingPayload = buildHearingPayload(wrapper, referenceDataServiceHolder);
+            HearingRequestPayload hearingPayload = buildHearingPayload(wrapper, refData);
+            log.debug("Sending Create Hearing Request for Case ID {}", caseId);
             hmcUpdateResponse = hmcHearingApiService.sendCreateHearingRequest(hearingPayload);
 
             log.debug("Received Create Hearing Request Response for Case ID {}, Hearing State {} and Response:\n{}",
@@ -146,36 +155,47 @@ public class HearingsService {
         } else {
             hmcUpdateResponse = HmcUpdateResponse.builder()
                 .hearingRequestId(hearing.getHearingId())
-                .versionNumber(hearing.getRequestVersion())
+                .versionNumber(getHearingVersionNumber(hearing))
                 .status(hearing.getHmcStatus())
                 .build();
 
-            log.debug("Existing hearing found, skipping Create Hearing Request for Case ID {}, Hearing State {} and "
+            log.debug("Existing hearing found, skipping Create Hearing Request for Case ID {}, Hearing State {}, Hearing version {} and "
                     + "Hearing Id {}",
                 caseId,
                 hearing.getHmcStatus(),
+                hearing.getRequestVersion(),
                 hearing.getHearingId());
         }
 
         hearingResponseUpdate(wrapper, hmcUpdateResponse);
     }
 
+    private Long getHearingVersionNumber(CaseHearing hearing) {
+        try {
+            HearingGetResponse response = hmcHearingApiService.getHearingRequest(hearing.getHearingId().toString());
+            return response.getRequestDetails().getVersionNumber();
+        } catch (GetHearingException e) {
+            log.debug("Hearing with id {} doesn't exist", hearing.getHearingId());
+        }
+
+        return HEARING_VERSION_NUMBER;
+    }
+
     private void updateHearing(HearingWrapper wrapper) throws UpdateCaseException, ListingException {
-        OverridesMapping.setDefaultOverrideFields(wrapper, referenceDataServiceHolder);
-        HearingRequestPayload hearingPayload = buildHearingPayload(wrapper, referenceDataServiceHolder);
+        if (isNull(wrapper.getCaseData().getSchedulingAndListingFields().getOverrideFields())) {
+            OverridesMapping.setOverrideValues(wrapper, refData);
+        }
+        HearingRequestPayload hearingPayload = buildHearingPayload(wrapper, refData);
         String hearingId = getHearingId(wrapper);
+        log.debug("Sending Update Hearing Request for Case ID {}", wrapper.getCaseData().getCcdCaseId());
         HmcUpdateResponse response = hmcHearingApiService.sendUpdateHearingRequest(hearingPayload, hearingId);
 
         log.debug("Received Update Hearing Request Response for Case ID {}, Hearing State {} and Response:\n{}",
                 wrapper.getCaseData().getCcdCaseId(),
                 wrapper.getHearingState().getState(),
-                response.toString());
+                response);
 
         hearingResponseUpdate(wrapper, response);
-    }
-
-    private void updatedCase(HearingWrapper wrapper) {
-        // TODO implement mapping for the event when a case is updated
     }
 
     private void cancelHearing(HearingWrapper wrapper) {
@@ -186,16 +206,11 @@ public class HearingsService {
         log.debug("Received Cancel Hearing Request Response for Case ID {}, Hearing State {} and Response:\n{}",
                 wrapper.getCaseData().getCcdCaseId(),
                 wrapper.getHearingState().getState(),
-                response.toString());
+                response);
         // TODO process hearing response
     }
 
-    @Retryable(
-        value = UpdateCaseException.class,
-        maxAttemptsExpression = "${retry.hearing-response-update.max-retries}",
-        backoff = @Backoff(delayExpression = "${retry.hearing-response-update.backoff}"))
     public void hearingResponseUpdate(HearingWrapper wrapper, HmcUpdateResponse response) throws UpdateCaseException {
-
         SscsCaseData caseData = wrapper.getCaseData();
         Long hearingRequestId = response.getHearingRequestId();
         String caseId = caseData.getCcdCaseId();
@@ -215,12 +230,25 @@ public class HearingsService {
         HearingsServiceHelper.updateHearingId(hearing, response);
         HearingsServiceHelper.updateVersionNumber(hearing, response);
 
+        if (refData.isAdjournmentFlagEnabled()
+            && YesNo.isYes(caseData.getAdjournment().getAdjournmentInProgress())) {
+            log.debug("Case Updated with AdjournmentInProgress to NO for Case ID {}", caseId);
+            caseData.getAdjournment().setAdjournmentInProgress(YesNo.NO);
+        }
+
         HearingEvent event = HearingsServiceHelper.getHearingEvent(wrapper.getHearingState());
-        ccdCaseService.updateCaseData(
-            caseData,
-            event.getEventType(),
-            event.getSummary(),
-            event.getDescription());
+        log.info("Updating case with event {} description is {}", event, event.getDescription());
+        var details = ccdCaseService.updateCaseData(caseData, wrapper, event);
+
+        if (nonNull(details)) {
+            log.info("Case update details CCD state {}  event id: {} event token: {} callbackresponsestatus: {} caseid {}",
+                     details.getState(),
+                     details.getEventId(),
+                     details.getEventToken(),
+                     details.getCallbackResponseStatus(),
+                     details.getCaseTypeId()
+            );
+        }
 
         log.info("Case Updated with Hearing Response for Case ID {}, Hearing ID {}, Hearing State {} and CCD Event {}",
             caseId,
@@ -236,7 +264,7 @@ public class HearingsService {
             wrapper.getCaseData().getCcdCaseId(),
             response.getHearingRequestId(),
             wrapper.getHearingState().getState(),
-            exception);
+            exception.toString());
 
         throw new ExhaustedRetryException("Cancellation request Response received, rethrowing exception", exception);
     }
@@ -255,9 +283,14 @@ public class HearingsService {
             cancellationReasons = List.of(hearingRequest.getCancellationReason());
         }
 
-        SscsCaseDetails sscsCaseDetails = ccdCaseService.getCaseDetails(hearingRequest.getCcdCaseId());
+        EventType eventType = HearingsServiceHelper.getCcdEvent(hearingRequest.getHearingState());
+        log.info("Getting case details with event {} {}", eventType, eventType.getCcdType());
+        SscsCaseDetails sscsCaseDetails = ccdCaseService.getStartEventResponse(Long.parseLong(hearingRequest.getCcdCaseId()), eventType);
+
         return HearingWrapper.builder()
                 .caseData(sscsCaseDetails.getData())
+                .eventId(sscsCaseDetails.getEventId())
+                .eventToken(sscsCaseDetails.getEventToken())
                 .caseState(State.getById(sscsCaseDetails.getState()))
                 .hearingState(hearingRequest.getHearingState())
                 .cancellationReasons(cancellationReasons)
